--- a/stopwatch.html
+++ b/stopwatch.html
@@ -10,13 +10,13 @@
     <body>
                <div id="stopwatch">  
                    <div id="screens-container">
-                        <div class="screen"><p>00</p></div>
+                        <div class="screen"><p>00</p></div> <!--hours-display-->
                         <h1>:</h1>
-                        <div class="screen"><p>00</p></div>
+                        <div class="screen"><p>00</p></div>   <!--minutes-display-->
                         <h1>:</h1>
-                        <div class="screen"><p>00</p></div>
+                        <div class="screen"><p>00</p></div>  <!--seconds-display-->
                         <h1>:</h1>
-                        <div class="screen"><p>00</p></div>
+                        <div class="screen"><p>00</p></div>   <!--ms-display-->
                    </div>
                    <div id="buttons-container">
                      <button type="button" class="btn btn-primary"><i class="fas fa-play"></i></button>
